# EasyConfig

./: CMakeLists.txt  README.md
examples/: ts_ini.cpp
src/: easy_config.h  easy_config_define.h  easy_config_export.h
src/impl/: easy_config.cpp  easy_config_ini.cpp  easy_config_ini.h  easy_config_json.cpp  easy_config_json.h  easy_config_utils.h
